samples/_failures_safe/1761605753_fb03cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbbc72c1.c: In function ‘main’:
./samples/SAFE/__tmp_fbbc72c1.c:181: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_fbbc72c1.c:180:14: note: to match this ‘(’
  180 |     if (fgets(choice_str, sizeof(choice_str), stdin
      |              ^
./samples/SAFE/__tmp_fbbc72c1.c:180:5: error: expected declaration or statement at end of input
  180 |     if (fgets(choice_str, sizeof(choice_str), stdin
      |     ^~
